localhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stexs-dev-ingress
  labels:
    name: stexs-dev-ingress
spec:
  rules:
  - host: stexs.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stexs-frontend
            port: 
              number: 80
