deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: stexs-backend
  name: stexs-backend
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 80
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: stexs-backend
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: stexs-db
  name: stexs-db
spec:
  ports:
    - name: "1433"
      port: 1433
      targetPort: 1433
  selector:
    io.kompose.service: stexs-db
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: stexs-frontend
  name: stexs-frontend
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: stexs-frontend
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/stexs-default: "true"
    io.kompose.service: stexs-backend
  name: stexs-backend
spec:
  containers:
    - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Development
        - name: DontBuildSwagger
          value: "true"
      image: stexs-backend
      imagePullPolicy: Never
      name: stexs-backend
      ports:
        - containerPort: 80
      resources: {}
  restartPolicy: OnFailure
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: stexs-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/stexs-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/stexs-default: "true"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: stexs-db
  name: stexs-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stexs-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/stexs-default: "true"
        io.kompose.service: stexs-db
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_PASSWORD
              value: Adminxyz123!
          image: mcr.microsoft.com/mssql/server:2022-latest
          name: stexs-db
          ports:
            - containerPort: 1433
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -o ./deployment.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/stexs-default: "true"
    io.kompose.service: stexs-frontend
  name: stexs-frontend
spec:
  containers:
    - image: stexs-frontend
      name: stexs-frontend
      imagePullPolicy: Never
      ports:
        - containerPort: 80
      resources: {}
  restartPolicy: OnFailure
status: {}


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stexs-ingress
  labels:
    name: stexs-ingress
spec:
  rules:
  - host: dev.niposch.de
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stexs-frontend
            port: 
              number: 80
